--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^2.0.1",
+    "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
@@ -20,8 +26,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "katex": "^0.10.1",
+    "kefir": "^3.8.6",
     "marked": "^0.6.1",
     "normalize.css": "^8.0.1",
-    "purecss": "^1.0.0"
+    "purecss": "^1.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
